@@ -1,3 +1,8 @@
+2011-08-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Minor improvement in 8-bit by literal multiplication.
+
 2011-08-03 Borut Razem <borut.razem AT gmail.com>
 
 	* sdcc development documentation moved from doc to sdcc wiki:
